# myaalkc

./: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  README.md  __init__.py  config.py  customer_crud.py  database.py  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  inventory.py  purchasing.py  reports.py  sales.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  inventory.py  purchasing.py  sales.py  user.py
backend/app/schemas/: __init__.py  auth.py  inventory.py  purchasing.py  sales.py  user.py
backend/app/utils/: helpers.py
backend/crud/: __init__.py  customer_crud.py  inventory_crud.py  invoice_crud.py
backend/models/: __init__.py  inventory_model.py  invoice_model.py
backend/routers/: __init__.py  customer_router.py  inventory_router.py
backend/schemas/: __init__.py  customer_schema.py  inventory_schema.py  invoice_schema.py
backend/tests/: conftest.py  test_main.py
docs/: README.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Inventory.tsx  Login.tsx  Purchasing.tsx  Reports.tsx  Sales.tsx  index.ts
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: helpers.ts
(+5 files in other folders)
